--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.leosclockworks.tools",
+  "name": "com.leosclockworks.Templater",
   "version": "1.0.1",
   "displayName": "Leo's Templater",
   "description": "Adds code templates for faster work flows",
